--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-scripts": "^5.0.1",
     "sass": "^1.77.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"npx json-server heroes.json --port 3001\"",
